tests/fail/t13.hir
// 13 : mutiple definitions (basic) - wrong return type

module var_decl{
    def main():table{
        x:bool = 0:bool;
        var z:i32;
        if(x){
            z = 0:i32;
        }
        else {
            z = 1:i32;
        }
        return z;
    }
}

// similar to t/t27.hir

